# internal/api/router.go
@@ -37,7 +37,7 @@ func newRouter(
 
 		r.Post("/policies", createPolicyHandler(b))
 		r.Get("/policies", listPoliciesHandler(b))
-		r.Post("/policies/{policyID}/versions", createPolicyVersionHandler(b))
+		r.Put("/policies/{policyID}", updatePolicyHandler(b))
 		r.Post("/policies/{policyID}/archive", archivePolicyHandler(b))
 		r.Get("/policies/{policyID}", getPolicyHandler(b))
 		r.Post("/policies/{policyID}/reconciliation", reconciliationHandler(b))
